--- a/src/main/resources/templates/evento/detalhesEvento.html
+++ b/src/main/resources/templates/evento/detalhesEvento.html
@@ -19,6 +19,11 @@
 			<p>Data: <span th:text="${evento.data}"></span></p>
 			<p>Horário: <span th:text="${evento.horario}"></span></p>
 		</div>
+	<form method="post">
+		Nome: <input type="text" value="" name="nomeConvidado"/>
+		RG: <input type="text" value="" name="rg"/>
+		<button class="waves-effect waves-light btn" type="submit">Adicionar Convidado</button>
+	</form>
 	</div>
 
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
