--- a/src/main/resources/templates/evento/detalhesEvento.html
+++ b/src/main/resources/templates/evento/detalhesEvento.html
@@ -19,13 +19,26 @@
 			<p>Data: <span th:text="${evento.data}"></span></p>
 			<p>Horário: <span th:text="${evento.horario}"></span></p>
 		</div>
-	<form method="post">
-		Nome: <input type="text" value="" name="nomeConvidado"/>
-		RG: <input type="text" value="" name="rg"/>
-		<button class="waves-effect waves-light btn" type="submit">Adicionar Convidado</button>
-	</form>
+		
+		<th:block th:include="mensagemValidacao"></th:block>
+		</br>
+		<form method="post" th:object="${convidado}">
+			Nome: <input type="text" value="" name="nomeConvidado"/>
+			RG: <input type="text" value="" name="rg"/>
+			<button class="waves-effect waves-light btn" type="submit">Adicionar Convidado</button>
+		</form>
 	</div>
-
+	<h5>Lista de Convidados</h5>
+	<div class="container" th:each="convidado : ${convidados}">	
+		<div class="row">
+			<div class="input-field col s6">
+				<p><span th:text="${convidado.nomeConvidado}"></span></p>
+			</div>
+			<div class="input-field col s3">
+				<p><span th:text="${convidado.rg}"></span></p>
+			</div>
+		</div>
+	</div>
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
 </body>
