--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,12 +6,25 @@
 
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
     <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css"  media="screen,projection"/>
+    <link rel="stylesheet" href="style/styleCSS.css"/>
 
       <meta name="viewport" content="width=device-width, initial-scale=1.0", charset="ISO-8859-1"/>
 </head>
 <body>
-	<h1>Lista de Eventos</h1>
-	<h3><a href="/cadastrarEvento" class="waves-effect waves-light btn"><i class="material-icons left">add_circle_outline</i>Cadastrar Evento</a></h3>
+
+	<header>
+		 <nav>
+    		<div class="nav-wrapper">
+      			<a href="#" class="brand-logo">Lista de Eventos</a>
+     			<ul id="nav-mobile" class="right hide-on-med-and-down">
+       				<li><a href="/cadastrarEvento" class="waves-effect waves-light btn"><i class="material-icons left">add_circle_outline</i>Cadastrar Evento</a></li>
+        			<li><a href="badges.html">Components</a></li>
+        			<li><a href="collapsible.html">JavaScript</a></li>
+     			 </ul>
+   			 </div>
+  		</nav>
+	</header>
+	
 	<table class="container">
 		<thead>
 			<tr>>
@@ -19,6 +32,7 @@
 				<th>Local</th>
 				<th>Data</th>
 				<th>Horario</th>
+				<th>Deletar</th>
 			</tr>
 		</thead>
 		<tbody>
@@ -27,6 +41,7 @@
 				<td><span th:text="${evento.local}"></span></td>
 				<td><span th:text="${evento.data}"></span></td>
 				<td><span th:text="${evento.horario}"></span></td>
+				<td><a th:href="${(#mvc.url('EC#deletarEvento').arg(0, evento.id)).build()}"><i class="material-icons left">delete</i></a></td>
 			</tr>
 		</tbody>
 	</table>
